--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
         <span id="cgpa-value">0.00</span>
       </div>
     </div>
+    <div class="credits">
+      Designed by <a href="https://www.jayanth.xyz/">Jayanth</a>
+    </div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
